Remove z-index: 1 because it is no longer necessary (#217)

--- a/src/skeleton.css
+++ b/src/skeleton.css
@@ -21,7 +21,6 @@
   position: relative;
   user-select: none;
   overflow: hidden;
-  z-index: 1; /* Necessary for overflow: hidden to work correctly in Safari */
 }
 
 .react-loading-skeleton::after {
